crates/icydb-schema-derive/tests/ui/primary_key_cardinality_fail.stderr
error: primary key field 'id' must have cardinality One
 --> tests/ui/primary_key_cardinality_fail.rs:5:10
  |
5 |     pk = "id",
  |          ^^^^
